# spikes

./: README.md
2020/go20201210/: main.go
2020/rust-2020-06-19/: Cargo.toml
2020/rust-2020-06-23/: Cargo.toml
2020/rust-2020-07-10/: Cargo.toml
2020/rust-2020-10-01/: Cargo.toml
2020/rust-2020-10-24/: Cargo.toml
2020/rust-2020-10-25/: Cargo.toml
2020/rust-2020-11-14/: Cargo.toml
2020/rust-2020-12-04/: Cargo.toml
2020/rust-2020-12-28/: Cargo.toml
2020/rust-2020-12-29/: Cargo.toml
go-2020-12-10/: go.mod  go.sum  main.go
go-2020-12-10-bin/: go.mod  go.sum  main.go
go-2021-01-08/: go.mod  main.go
go-2021-01-08/slicerepo/: slicerepo.go
go-2021-01-08/waker/: waker.go
go20201210/: go.mod  go.sum  main.go
go20201210/go2020/: go2020.go
rust-2020-06-11/: Cargo.toml
rust-2020-06-12/: Cargo.toml
rust-2020-06-13/: Cargo.toml
rust-2020-07-04/: Cargo.toml
rust-2020-07-31/: Cargo.toml
rust-2020-08-15/: Cargo.toml
rust-2020-09-10/: Cargo.toml
rust-2020-09-11/: Cargo.toml
rust-2020-09-14/: Cargo.toml
rust-2020-09-15/: Cargo.toml
rust-2020-09-30/: Cargo.toml
rust-2020-10-17/: Cargo.toml
rust-2020-10-18/: Cargo.toml
rust-2020-11-19/: Cargo.toml
rust-2020-12-02/: Cargo.toml
rust-2020-12-04b/: Cargo.toml
rust-2020-12-04b/src/: lib.rs
rust-2020-12-15/: Cargo.toml
rust-2020-12-17/: Cargo.toml
rust-2020-12-17/src/: main.rs
rust-2020-12-19/: Cargo.toml
rust-2021-01-19/: Cargo.toml
rust-2021-07-31/: Cargo.toml
rust-2021-08-09/: Cargo.toml  ignore
rust-2021-12-23/: Cargo.toml
rust-2022-04-22/: Cargo.toml
(+39 files in other folders)
