[package]
name = "x2020-12-04b"
version = "0.1.0"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.60"
serde_json_old = {package = "serde_json", version= "0.9"}
