[package]
name = "rust-2020-12-17"
version = "0.1.0"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.60"
serde = { version = "1.0.118", features=["derive"] }
anyhow = "1.0.35"
